--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'fabric-loom' version '1.12-SNAPSHOT'
+    id 'maven-publish'
 }
 
 project.ext.lwjglVersion = "3.3.3"
@@ -32,8 +33,19 @@ configurations {
     modCompileOnlyApi.extendsFrom modJij
 }
 
-dependencies {
+sourceSets {
+    api {
+        java {
+            srcDirs = ['src/api/java']
+        }
+    }
+    main {
+        compileClasspath += sourceSets.api.output
+        runtimeClasspath += sourceSets.api.output
+    }
+}
 
+dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
@@ -45,8 +57,8 @@ dependencies {
     modRuntimeOnly "maven.modrinth:iris:1.8.5+1.21.4-fabric"
     modRuntimeOnly "maven.modrinth:sodium-extra:mc1.21.4-0.6.1+fabric"
     modRuntimeOnly "maven.modrinth:lithium:mc1.21.4-0.14.7-fabric"
-    modJij "maven.modrinth:in-game-account-switcher:WBbjirJP"
-    modJij "com.viaversion:viafabricplus:4.0.2"
+    modImplementation "maven.modrinth:in-game-account-switcher:WBbjirJP"
+    modImplementation "com.viaversion:viafabricplus:4.0.2"
     modRuntimeOnly "maven.modrinth:immediatelyfast:1.3.3+1.21.4-fabric"
     modRuntimeOnly "maven.modrinth:entityculling:NkBXk0Ye"
 
@@ -54,9 +66,6 @@ dependencies {
     jij 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     jij 'io.github.humbleui:types:0.2.0'
     jij 'io.github.humbleui:skija-windows-x64:0.116.4'
-    jij 'io.github.humbleui:skija-linux-x64:0.116.4'
-    jij 'io.github.humbleui:skija-macos-x64:0.116.4'
-    jij 'io.github.humbleui:skija-macos-arm64:0.116.4'
     jij 'com.kohlschutter.junixsocket:junixsocket-common:2.10.1'
     jij 'org.java-websocket:Java-WebSocket:1.6.0'
     jij 'com.mpatric:mp3agic:0.9.1'
@@ -85,6 +94,9 @@ dependencies {
         include dep
     }
 
+    apiImplementation 'org.apache.logging.log4j:log4j-api:2.24.1'
+    apiImplementation 'org.apache.logging.log4j:log4j-core:2.24.1'
+
     afterEvaluate {
         configurations.jij.incoming.resolutionResult.allDependencies.each {
             dependencies.include(dependencies.implementation(dependencies.compileOnlyApi(it.requested.toString()) {
@@ -93,6 +105,13 @@ dependencies {
         }
     }
 }
+
+compileApiJava {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
+
+compileJava.dependsOn compileApiJava
 
 processResources {
     inputs.property "version", project.version
@@ -114,6 +133,70 @@ tasks.withType(JavaCompile).configureEach {
     it.options.release = 21
 }
 
+jar {
+    from sourceSets.api.output
+}
+
 java {
     withSourcesJar()
+
+    registerFeature('api') {
+        usingSourceSet(sourceSets.api)
+    }
+}
+
+tasks.register('apiSourceJar', Jar) {
+    archiveClassifier = 'api-sources'
+    from sourceSets.api.allJava
+}
+
+
+build.dependsOn apiSourceJar
+
+classes.dependsOn apiClasses
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            groupId = 'cn.pupperclient'
+            artifactId = 'pupperclient'
+            version = project.version
+
+            artifact sourcesJar
+        }
+
+        api(MavenPublication) {
+            groupId = 'cn.pupperclient'
+            artifactId = 'pupperclient-api'
+            version = project.version
+
+            artifact tasks.named('apiJar')
+            artifact apiSourceJar
+            pom {
+                name = 'PupperClient API'
+                description = 'API for developing plugins for PupperClient'
+                url = 'https://github.com/PupperClient/Pupper-Client'
+
+                licenses {
+                    license {
+                        name = 'MIT License'
+                        url = 'https://opensource.org/licenses/MIT'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id = 'oneachina'
+                        name = 'oneachina'
+                        email = 'ruiruixi@hotmail.com'
+                    }
+                }
+            }
+        }
+    }
+
+    repositories {
+        mavenLocal()
+    }
 }
