--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,10 @@ dependencies {
     jij 'io.github.smartboot.socket:aio-core:1.7.1'
     jij 'com.github.ben-manes.caffeine:caffeine:3.1.8'
     jij 'io.github.humbleui:types:0.2.0'
-    jij 'io.github.humbleui:skija-windows-x64:0.116.4'
+    jij 'io.github.humbleui:skija-windows-x64:0.143.2'
+    jij 'io.github.humbleui:skija-linux-x64:0.143.2'
+    jij 'io.github.humbleui:skija-linux-arm64:0.143.2'
+    jij 'io.github.humbleui:skija-macos-x64:0.143.2'
     jij 'com.kohlschutter.junixsocket:junixsocket-common:2.10.1'
     jij 'org.java-websocket:Java-WebSocket:1.6.0'
     jij 'com.mpatric:mp3agic:0.9.1'
